Update title and heading for CAKU Bus Finder

--- a/mobileindex.html
+++ b/mobileindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Bus Finder</title>
+  <title>CAKU Bus Finder</title>
   <style>
     :root {
       --bg: #ffffff;
@@ -193,7 +193,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Find Your Next Bus</h1>
+    <h1>Find Your Next Bus in Camp Arifjan, Kuwait!</h1>
 
     <div id="queryCard" class="card sticky">
       <div class="row">
