--- a/mobileindex.html
+++ b/mobileindex.html
@@ -389,10 +389,10 @@ function renderDebug(all, debug, origin, dest){
     const sample = all.slice(0,10).map(x => ({
       route: x.route, run: x.run, dep: x.dep, arr: x.arr, valid: !!x.valid
     }));
-    <!--return `<details class="debug"><summary>Why am I not seeing some routes?</summary>
+    return `<details class="debug"><summary>Why am I not seeing some routes?</summary>
       <div class="sub">${details}</div>
       <pre class="mono">${JSON.stringify({origin, dest, sample}, null, 2)}</pre>
-    </details>`;-->
+    </details>`;
   } catch(e){
     return '';
   }
