--- a/index.html
+++ b/index.html
@@ -90,8 +90,6 @@
       .table-as-cards td::before { content: attr(data-label); font-weight: 700; display: block; color: var(--muted); margin-bottom: 2px; }
     }
     footer { margin-top: 28px; padding-top: 14px; border-top: 1px solid var(--border); color: var(--muted); text-align: center; font-size: .95rem; }
-    details.debug { margin-top: 10px; }
-    details.debug summary { cursor: pointer; font-weight: 600; color: var(--accent); }
     .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; font-size: .9rem; }
   </style>
 </head>
@@ -374,14 +372,7 @@ function renderDirect(origin, dest, routeOpt){
   document.getElementById('results').appendChild(tblCard);
 }
 
-function renderDebug(all, debug, origin, dest){
-  try {
-    const total = all.length;
-    const valid = all.filter(x=>x.valid).length;
-    const missingTimes = all.filter(x=>x.reason==="missing_time_for_stop").length;
-    const routesMissingStops = debug.filter(x=>x.reason==="route_missing_one_of_stops").length;
-    const details = [
-      `Runs considered: ${total}`,
+`,
       `Valid direct runs: ${valid}`,
       `Runs missing one/both times: ${missingTimes}`,
       `Routes missing one of the stops: ${routesMissingStops}`
@@ -389,10 +380,7 @@ function renderDebug(all, debug, origin, dest){
     const sample = all.slice(0,10).map(x => ({
       route: x.route, run: x.run, dep: x.dep, arr: x.arr, valid: !!x.valid
     }));
-    return `<details class="debug"><summary>Why am I not seeing some routes?</summary>
-      <div class="sub">${details}</div>
-      <pre class="mono">${JSON.stringify({origin, dest, sample}, null, 2)}</pre>
-    </details>`;
+    return ``;
   } catch(e){
     return '';
   }
@@ -400,7 +388,7 @@ function renderDebug(all, debug, origin, dest){
 
 async function init(){
   document.getElementById('now').textContent = new Date().toLocaleString();
-  const res = await fetch('schedule.json');
+  const res = await fetch('schedule_with_pickup_dropoff.json');
   STATE.data = await res.json();
   STATE.stops = uniqueStops(STATE.data);
   populateSelectors();
