Refactor JSON fetch and route normalization logic
Updated JSON fetch logic to handle new data format and normalize routes from both old and new JSON shapes.

--- a/index.html
+++ b/index.html
@@ -388,12 +388,68 @@ function renderDirect(origin, dest, routeOpt){
 
 async function init(){
   document.getElementById('now').textContent = new Date().toLocaleString();
-// robust fetch with logging + JSON shape normalization
-const jsonUrl = new URL('schedule_with_pickup_dropoff.json?v=5', location.href).toString();
+// robust fetch + normalization for both old and new JSON shapes
+const jsonUrl = new URL('schedule_with_pickup_dropoff.json?v=7', location.href).toString();
 console.log('Loading schedule from:', jsonUrl);
 const res = await fetch(jsonUrl, { cache: 'no-store' });
 if (!res.ok) throw new Error(`Failed to fetch ${jsonUrl} → ${res.status}`);
-const json = await res.json();
+const raw = await res.json();
+
+// Accept either array-of-routes OR { routes: [...] }
+const rawRoutes = Array.isArray(raw) ? raw : (raw && Array.isArray(raw.routes) ? raw.routes : []);
+if (!rawRoutes.length) throw new Error('No routes found in JSON (expected array or {routes:[...]})');
+
+// Normalize to { label, stops[], departures[][{tripId, times[][{stop,time}]}] }
+function inferStopsFromDepartures(deps) {
+  const s = new Set();
+  (deps || []).forEach(trip => (trip?.times || trip?.stops || []).forEach(t => {
+    const stopName = t.stop || t.name;
+    if (stopName) s.add(stopName);
+  }));
+  return [...s];
+}
+
+const routes = rawRoutes.map((r, idx) => {
+  const label = r.label || r.name || r.route || r.routeId || `Route ${idx+1}`;
+  const departures = (r.departures || r.trips || r.runs || []).map((trip, i) => {
+    const timesSrc = trip?.times || trip?.stops || [];
+    const times = timesSrc
+      .map(t => ({ stop: t.stop || t.name, time: t.time || t.departure || t.arrival }))
+      .filter(t => t.stop && t.time);
+    return {
+      tripId: trip.tripId || trip.id || (i+1),
+      times
+    };
+  }).filter(trip => trip.times && trip.times.length);
+
+  const stops = Array.isArray(r.stops) && r.stops.length
+    ? r.stops
+    : inferStopsFromDepartures(departures);
+
+  return { label, stops, departures, is24Hour: !!r.is24Hour, serviceWindow: r.serviceWindow || null };
+}).filter(r => r.stops.length && r.departures.length);
+
+if (!routes.length) throw new Error('Routes normalized, but none have both stops and departures.');
+
+// Assign to STATE using the normalized shape
+STATE.data = routes;
+
+// Compute stops robustly from either r.stops or r.departures[*].times
+STATE.stops = (function uniqueStops(routes){
+  const set = new Set();
+  routes.forEach(r => {
+    (r.stops || []).forEach(s => s && set.add(s));
+    (r.departures || []).forEach(trip => (trip.times || []).forEach(t => t.stop && set.add(t.stop)));
+  });
+  return [...set].sort((a,b)=>a.localeCompare(b));
+})(STATE.data);
+
+// (optional) tiny banner so you can see it worked; delete later
+document.body.insertAdjacentHTML('beforeend',
+  `<div style="position:fixed;bottom:8px;left:8px;padding:.5rem .75rem;border-radius:6px;background:#0f172a;color:#e6eefc;font:12px/1.2 ui-sans-serif;z-index:9999">
+     Loaded <code>${routes.length}</code> routes · <code>${STATE.stops.length}</code> unique stops
+   </div>`);
+
 
 // <— normalize: support either array-of-routes OR { routes: [...] }
 STATE.data = Array.isArray(json) ? json : (json.routes || json);
